objects/VisitOps__Agenda_Survey__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__Agenda_Title__c</fullName>
        <formula>VisitOps__Agenda__r.VisitOps__Agenda_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agenda</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Agenda__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agenda</label>
        <referenceTo>VisitOps__Agenda__c</referenceTo>
        <relationshipLabel>Agenda Survey</relationshipLabel>
        <relationshipName>Agenda_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Arrival_Date_Location__c</fullName>
        <formula>DATETIMEVALUE(  VisitOps__Survey__r.VisitOps__Visit__r.VisitOps__ArrivalDateTimeLocationTZ__c  )</formula>
        <label>Arrival Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Departure_Date_Location__c</fullName>
        <formula>DATETIMEVALUE(  VisitOps__Survey__r.VisitOps__Visit__r.VisitOps__DepartureDateTimeLocationTZ__c  )</formula>
        <label>Departure Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Session_Expectations_Met__c</fullName>
        <inlineHelpText>Did these sessions/presenters meet your expectations?</inlineHelpText>
        <label>Session Expectations Met?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Somewhat</fullName>
                </value>
                <value>
                    <fullName>Not really</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Session_Rating__c</fullName>
        <label>Session Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>VisitOps__Survey__c</referenceTo>
        <relationshipLabel>Agenda Survey</relationshipLabel>
        <relationshipName>Agenda_Survey</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Agenda Survey</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__Agenda__c</columns>
        <columns>VisitOps__Survey__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>VisitOps__Agenda_Title__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>VisitOps__Session_Rating__c</columns>
        <columns>VisitOps__Comments__c</columns>
        <columns>VisitOps__Session_Expectations_Met__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AS {0000}</displayFormat>
        <label>Agenda Survey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agenda Survey</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>